--- a/public/admin_assets/css/login.css
+++ b/public/admin_assets/css/login.css
@@ -6,7 +6,7 @@
   font-family: 'Poppins',sans-serif;
 }
 body{
-  background: #1a4bbc;
+  background: rgba(26,188,156,0.3);
   overflow: hidden;
 }
 ::selection{
