--- a/public/front_assets/css/style.css
+++ b/public/front_assets/css/style.css
@@ -3472,3 +3472,22 @@ h2 {
   color:red;
   margin-top:-17px
 }
+#login_msg{
+  color:red;
+  clear:both;
+}
+#forgot_msg{
+  color:red;
+}
+.coupon_code input {
+  border: 1px solid #ccc;
+  height: 40px;
+  padding: 10px;
+  width: 100%;
+}
+
+.cart_color{
+  font-size: 14px;
+  color: green;
+  font-weight: bold;
+}
