My order Section added customer and admin pannel

--- a/public/admin_assets/css/theme.css
+++ b/public/admin_assets/css/theme.css
@@ -14610,3 +14610,17 @@ section {
 }
 
 .mb10{margin-bottom: 10px;}
+.ml15{margin-left: 15px;}
+
+.order_detail img{
+    width:100px;
+}
+.whitebg{
+    background-color: white;
+    padding: 30px;
+}
+.order_operation{
+    margin-top: 15px;
+    background-color: white;
+    padding: 30px;
+}
